Fixed text-overflow bug

--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ h1 {
   font-size: 13px;
   line-height: 1;
   color: #000000;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  padding: 12px;
 }
 
 .link-list {
@@ -63,26 +68,21 @@ ul {
   width: 100%;
 }
 
-/* li {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 100%;
-} */
+li {
+  display: flex;
+  flex-direction: column;
+  gap:0;
+}
 
 li a {
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap:8px;
+  align-items: center;
+
   transition: color 100ms ease-in-out, background 100ms ease-in-out;
   
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  
-  display: block;
-  flex-direction: row;
-  align-items: center;
   padding: 12px;
-  gap: 8px;
   border-radius: 4px;
   font-style: normal;
   font-weight: 400;
@@ -91,6 +91,15 @@ li a {
   letter-spacing: -0.01em;
   color: #333333;
   text-decoration: none;
+}
+
+li a .link-title {
+  flex: auto;
+  max-width: 100%;
+  height:16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 li a:hover {
